@@ -76,6 +76,7 @@ https://github.com/elastic/beats/compare/v6.4.0...6.x[Check the HEAD diff]
 - Avoid mapping issues in kubernetes module. {pull}8487[8487]
 - Recover metrics for old apache versions removed by mistake on #6450. {pull}7871[7871]
 - Fix dropwizard module parsing of metric names. {issue}8365[8365] {pull}6385[8385]
+- Fix issue that would prevent kafka module to find a proper broker when port is not set {pull}8613[8613]
 
 *Packetbeat*
 
